--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <h3>Contents</h3>
 <ul>
 <li> <a href="haddock-demo/src/Data.Hash.CRC32.Posix.html#iter_crc32">Source for Data.Hash.CRC32.Posix</a>
+<li> <a href="haddock-demo/src/Data.Compression.Inflate.html#inflate_string">Source of Data.Compression.Inflate</a>
 <li> <a href="./haddock-demo">MissingH index page</a>
 </ul>
 </body>
