--- a/hayoo-demo/page2.html
+++ b/hayoo-demo/page2.html
@@ -6,7 +6,7 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 <link href="hayoo.css" rel="stylesheet">
-<script src="/hayoo.js"></script>
+<script src="hayoo.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="search" title="Hayoo! Haskell API Search" href="opensearch.xml" type="application/opensearchdescription+xml" />
 <link rel="icon" href="/favicon.ico">
