--- a/hayoo-demo/max.html
+++ b/hayoo-demo/max.html
@@ -14,7 +14,7 @@
 </head>
 
 <body><div class="container"><hr />
-<form action="." method="get" id="search" role="search"><div class="row"><div class="col-xs-3"><a href="/"><img class="logo" src="/hayoo2.png" alt="Hayoo! logo">
+<form action="." method="get" id="search" role="search"><div class="row"><div class="col-xs-3"><a href="/"><img class="logo" src="hayoo2.png" alt="Hayoo! logo">
 </a>
 </div>
 <div class="col-xs-7"><input class="form-control" placeholder="Search" name="query" id="hayoo" type="text" autocomplete="off" accesskey="1" value="max">
