--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <li> <a href="haddock-demo/src/Data.Hash.CRC32.Posix.html#iter_crc32">Source for Data.Hash.CRC32.Posix</a>
 <li> <a href="haddock-demo/src/Data.Compression.Inflate.html#inflate_string">Source of Data.Compression.Inflate</a>
 <li> <a href="./haddock-demo">MissingH index page</a>
-<li> <a href="./hayoo-demo/page2.html">delete page</a>
-<li> <a href="./hayoo-demo/max.html">max page</a>
+<li> <a href="./hayoo-demo/page2.html">delete page with more/less</a>
+<li> <a href="./hayoo-demo/max.html">max page with more/less</a>
+<li> <a href="./hayoo-demo/page2.html">delete page with ellipsis</a>
+<li> <a href="./hayoo-demo/max.html">max page with ellipsis</a>
 </ul>
 </body>
 </html>
