--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <li> <a href="./haddock-demo">MissingH index page</a>
 <li> <a href="./hayoo-demo/page2.html">delete page with more/less</a>
 <li> <a href="./hayoo-demo/max.html">max page with more/less</a>
-<li> <a href="./hayoo-demo/page2.html">delete page with ellipsis</a>
-<li> <a href="./hayoo-demo/max.html">max page with ellipsis</a>
+<li> <a href="./hayoo-demo2/page2.html">delete page with ellipsis</a>
+<li> <a href="./hayoo-demo2/max.html">max page with ellipsis</a>
 </ul>
 </body>
 </html>
