--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <body>
 <h3>Contents</h3>
 <ul>
-<li> <a href="haddock-demo/src/Data.Hash.CRC32.Posix.html#iter_crc32">Source for Data.Hash.CRC32.Posix</a>
-<li> <a href="haddock-demo/src/Data.Compression.Inflate.html#inflate_string">Source of Data.Compression.Inflate</a>
-<li> <a href="./haddock-demo">MissingH index page</a>
-<li> <a href="./hayoo-demo/page2.html">delete page with more/less</a>
-<li> <a href="./hayoo-demo/max.html">max page with more/less</a>
-<li> <a href="./hayoo-demo2/page2.html">delete page with ellipsis</a>
-<li> <a href="./hayoo-demo2/max.html">max page with ellipsis</a>
+<li> type-span info in hyperlinked source:
+  <p> Hovering over an imported symbol shows providing module. Clicking on a symbol reveals type. Use 'a' and 's' to grow / shrink span.
+  <ul>
+  <li> <a href="haddock-demo/src/Data.Hash.CRC32.Posix.html#iter_crc32">Source for Data.Hash.CRC32.Posix</a>
+  <li> <a href="haddock-demo/src/Data.Compression.Inflate.html#inflate_string">Source of Data.Compression.Inflate</a>
+  <li> <a href="./haddock-demo">MissingH index page</a>
+  </ul>
+<li> hayoo result docs demos:
+  <ul>
+  <li> <a href="./hayoo-demo/page2.html">delete page with more/less</a>
+  <li> <a href="./hayoo-demo/max.html">max page with more/less</a>
+  <li> <a href="./hayoo-demo2/page2.html">delete page with ellipsis</a>
+  <li> <a href="./hayoo-demo2/max.html">max page with ellipsis</a>
+  </ul>
+<li> haddock index autocomplete
+   <p> Hit ESC to bring up search box.
+  <ul>
+  <li> <a href="./haddock-index-demo/test-doc-index.html">array-0.5.1.0</a>
+  <li> <a href="./haddock-index-demo/doc-index-All.html">ghc-api-7.10.2</a>
+  </ul>
 </ul>
 </body>
 </html>
