--- a/ec1d7043b9929689281cc2516f2f7000/riddler-2016-08-19.html
+++ b/ec1d7043b9929689281cc2516f2f7000/riddler-2016-08-19.html
@@ -58,6 +58,9 @@
    B &amp;= \|y(0)\| \\
    \dot{y} &amp; = A / \|A\|
  \end{align}
+\]</span> Solving this for an arbitrary <span class="math">\(y(0) = (a,b)\)</span> results in the interesting formula: <span class="math">\[
+v = \frac{ \sqrt{a^2 + b^2} + \sqrt{ (a-2)^2 + (b-2)^2 }}{2\sqrt{(a-1)^2+(b-1)^2}}
 \]</span></p>
+<p>This suggests that we can define the problem for starting points outside of the paddock, and that the velocity is symmetric about the point <span class="math">\((1,1)\)</span>, i.e. <span class="math">\(v(a,b) = v(2-a,2-b)\)</span>.</p>
 </body>
 </html>
