--- a/ec1d7043b9929689281cc2516f2f7000/riddler-2016-08-19.html
+++ b/ec1d7043b9929689281cc2516f2f7000/riddler-2016-08-19.html
@@ -62,5 +62,10 @@
 v = \frac{ \sqrt{a^2 + b^2} + \sqrt{ (a-2)^2 + (b-2)^2 }}{2\sqrt{(a-1)^2+(b-1)^2}}
 \]</span></p>
 <p>This suggests that we can define the problem for starting points outside of the paddock, and that the velocity is symmetric about the point <span class="math">\((1,1)\)</span>, i.e. <span class="math">\(v(a,b) = v(2-a,2-b)\)</span>.</p>
+<p>It also indicates that the following times are the same:</p>
+<ol style="list-style-type: decimal">
+<li>The time it takes the farmer to run to <span class="math">\((1,1)\)</span> and back to his original position.</li>
+<li>The time it takes the ram to run to the farmer's starting position and then to <span class="math">\((2,2)\)</span>.</li>
+</ol>
 </body>
 </html>
