--- a/knapp-temps/dec16-21.html
+++ b/knapp-temps/dec16-21.html
@@ -8519,5 +8519,6 @@
   </head>
   <body>
     <div id="curve_chart" style="width: 900px; height: 500px"></div>
+    <p>Note that the Knapp 3 temperature is delta from 70&deg; Fahrenheit.
   </body>
 </html> 
