West-side Soul updates

--- a/west-side-soul/A05 - Id Like To Teach The World To Sing.html
+++ b/west-side-soul/A05 - Id Like To Teach The World To Sing.html
@@ -13,7 +13,7 @@
 [C]I'd like to build the world a home
 And [D7]furnish it with love
 Grow [G7]apple trees and honey bees
-And [F]snow white turtle [C]doves
+And [F]snow-white turtle [C]doves
 </verse>
 
 <verse>
