--- a/west-side-soul/086 - Ho Hey.html
+++ b/west-side-soul/086 - Ho Hey.html
@@ -26,8 +26,10 @@ F C     F C      F C     F C      F
 (Ho!) I've been sleeping here instead
  C                                  
 (Hey!) I've been sleeping in my bed,
- Am                      G   Dm     F  C      F  C     F
-(Ho!) I've been sleeping in my bed    (Hey!)    (Ho!)
+ Am                      G   Dm     F
+(Ho!) I've been sleeping in my bed
+ C      F  C      F
+(Hey!)    (Ho!)
 </verse>
 
 <verse two-line nochords>
@@ -63,7 +65,8 @@ you're my sweet&mdash; (Ho!)  (Hey!)  (Ho!)  (Hey!)
 (Ho!) took a bus to Chinatown
 (Hey!) I'd be standing on Canal
 (Ho!) and Bowery  (Hey!)
-(Ho!) and she'd be standing next to me (Hey!) (2 - 3)
+(Ho!) and she'd be standing next to me
+(Hey!) (2 - 3x)
 </verse>
 
 <p>(CHORUS)
